RECGEN-6 - Implement data model definition

--- a/generators/kotlin-spring-backend-generator/templates/entity/__ControllerTest.kt.ejs
+++ b/generators/kotlin-spring-backend-generator/templates/entity/__ControllerTest.kt.ejs
@@ -1,5 +1,5 @@
 ---
-dependencies: [entity, integrationtest, controller, fixture]
+dependencies: [entity, controller, fixture]
 ---
 package <%= variables.packageName %>.controller
 
