RECGEN-16 - Add support for inputs

--- a/generators/kotlin-spring-backend-generator/templates/entity/__ControllerTest.kt.ejs
+++ b/generators/kotlin-spring-backend-generator/templates/entity/__ControllerTest.kt.ejs
@@ -1,5 +1,6 @@
 ---
-dependencies: [entity, controller, fixture]
+id: controller-test
+dependencies: [entity, controller]
 ---
 package <%= variables.packageName %>.controller
 
